<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.yakudza_docs_mobile.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_dishFeedFragment"
            app:destination="@id/dishFeedFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dishFeedFragment"
        android:name="com.example.yakudza_docs_mobile.ui.feed.DishFeedFragment"
        android:label="@string/dish_feed"
        tools:layout="@layout/fragment_dish_feed">

        <action
            android:id="@+id/action_dishFeedFragment_to_dishDetailFragment"
            app:destination="@id/dishDetailFragment" />

        <action
            android:id="@+id/action_dishFeedFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/dishFeedFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dishDetailFragment"
        android:name="com.example.yakudza_docs_mobile.ui.detail.DishDetailFragment"
        android:label="@string/dish_detail"
        tools:layout="@layout/fragment_dish_detail">

        <argument
            android:name="dishId"
            app:argType="integer" />
    </fragment>
</navigation>